<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/personName"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/person_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/personAge"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/person_age" />

    </LinearLayout>

    <TextView
        android:id="@+id/petsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_name" />

</LinearLayout>