<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_type"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop = "true"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_sub_type"
        android:layout_marginTop="30dp"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/sub_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pet_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btn_add_pet"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:text="@string/add_pet"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>


